Ajout d'un interface graphique fonctionnel, plus d'un executable lui étant propre. \n Correction de bug sur le score, et sur la victoire. Les valeurs retournés était fausses. \n suppresion que la fonction free_grid qui était un doublon de delete_grid. \n Création des image et ajout de celles-ci pour l'interface graphique. \n MAJ du README.md \n Et peut être d'autre babiole dont je ne me souviens plus :p

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,15 +2,18 @@ CC= gcc
 CFLAGS= -std=c99 -Wall -Werror -g
 OUTFILE1= grid_test
 OUTFILE2= testRandom
+OUTFILE3= 2048_graphics
 OBJS1= grid_test.o
 OBJS2= testRandom.o
-LDLIB= -lgrid -lm
+OBJS3= 2048_graphics.o
+LDLIB= -lgrid -lgraphics -lm -lSDL -lSDL_image              #-lSDL_ttf pour charger la bibliotheque pour ecrire
 LDFLAGS= -L ../build/src
 
-all : test1 test2
+all : test1 test2 jeu_graphique
 
 test1 : $(OUTFILE1)
 test2 : $(OUTFILE2)
+jeu_graphique : $(OUTFILE3)
 
 $(OUTFILE1): $(OBJS1)
 		$(CC) $^ -o $@ $(LDFLAGS) $(LDLIB)
@@ -18,8 +21,11 @@ $(OUTFILE1): $(OBJS1)
 $(OUTFILE2): $(OBJS2)
 		$(CC) $^ -o $@ $(LDFLAGS) $(LDLIB)
 
+$(OUTFILE3): $(OBJS3)
+		$(CC) $^ -o $@ $(LDFLAGS) $(LDLIB)
+
 %o: %c
 	$(CC) -c $(CFLAGS) $< -o $@
 
 clean: 
-	rm -f $(OBJS) $(OUTFILE1) $(OUTFILE2)
+	rm -f $(OBJS1) $(OBJS2) $(OBJS3) $(OUTFILE1) $(OUTFILE2) $(OUTFILE3)
